--- a/WTO/Views/Partial/Notification/NotificationPlanTakeAction.cshtml
+++ b/WTO/Views/Partial/Notification/NotificationPlanTakeAction.cshtml
@@ -41,7 +41,7 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-xs-12 col-sm-4 col-md-4">
+                                        <div class="col-xs-12 col-sm-4 col-md-4 hidden">
                                             <p class="wto-label-bold dark-blue">Notification Stage <span class="pull-right hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8">
