Chnages on Dashboard by aman

--- a/WTO/Views/Partial/Dashboard/DashboardHSCode.cshtml
+++ b/WTO/Views/Partial/Dashboard/DashboardHSCode.cshtml
@@ -10,7 +10,7 @@
         </div>
         <div class="col-xs-4 col-sm-6 col-md-4 top-offset-10">
             <p>
-                <span class="pull-right texthead"><img src="~/contents/img/humbergur.png" data-toggle="modal" data-target="#selecthr" onclick="bindhscodeUId();"></span>
+                <span class="pull-right texthead"><img src="~/contents/img/humbergur.png" style="cursor:pointer" data-toggle="modal" data-target="#selecthr" onclick="bindhscodeUId();"></span>
             </p>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12">
