Changes by Ashvini for Notification Meeting

--- a/WTO/Views/Partial/NotificationStakeholders.cshtml
+++ b/WTO/Views/Partial/NotificationStakeholders.cshtml
@@ -5,7 +5,7 @@
 <div class="row top-offset-10">
     <div class="col-xs-12 col-sm-12 col-md-12">
         <div class="table-responsive nopaging adnotificationtable sentmail">
-            <table class="table table-bordered display" id="notificationlist" cellspacing="0" width="100%">
+            <table class="table table-bordered display" id="NotificationStakholderslist" cellspacing="0" width="100%">
                 <thead class="second-blackbackground">
                     <tr>
                         <th>
