--- a/WTO/Views/WTO/AddNotification.cshtml
+++ b/WTO/Views/WTO/AddNotification.cshtml
@@ -943,7 +943,7 @@
                                                     <div class="fileinput fileinput-new pull-left">
                                                         <span class="btn btn-light-blue btn-padding btn-file">
                                                             <span class="puttext">Add more</span>
-                                                            <input type="file" id="AddAttachment_UploadDocumentId" class="fileholder uploadfile ActionUploadbtn" style="height: 34px !important;bottom: 37px !important;width: 137px !important;" multiple />
+                                                            <input type="file" id="AddAttachment_UploadDocumentId" class="fileholder uploadfile ActionUploadbtn" style="height: 34px !important;bottom: 37px !important;width: 137px !important;" onchange="AddMailAttachment(this);" multiple  />
                                                         </span>
                                                         <br />
                                                         <span class="text-danger">doc and pdf file only</span>
