--- a/WTO/Views/WTO/ManageAccess.cshtml
+++ b/WTO/Views/WTO/ManageAccess.cshtml
@@ -22,7 +22,7 @@
                     <li role="presentation"><a href="#Section7" aria-controls="messages" role="tab" data-toggle="tab" onclick="InternalStackHolderTabClick();">Internal StakeHolders</a></li>
                     <li role="presentation"><a href="#Section8" aria-controls="messages" role="tab" data-toggle="tab" onclick="RegulatoryBodiesTabClick();">Regulatory Bodies</a></li>
                     <li role="presentation"><a href="#Section9" aria-controls="messages" role="tab" data-toggle="tab" onclick="LanguageTabClick();">Languages</a></li>
-                   </ul>
+                </ul>
                 <!-- Tab panes -->
                 <div class="tab-content tabs">
                     <div id="Section1" role="tabpanel" class="tab-pane fade in active">
@@ -101,31 +101,31 @@
                         <div class="col-xs-12 col-sm-12 col-md-12 selecthrbodyinner">
                             <form class="form-horizontal top-offset-20">
                                 <div class="form-group">
-                                    <label class="control-label col-sm-5">Country Code<sup class="mandetory">*</sup></label>
+                                    <label class="control-label col-sm-5">Country Code<sup class="mandetory">*</sup>:</label>
                                     <div class="col-sm-7">
                                         <input type="text" class="form-control" id="CountryCodeId" maxlength="4" onkeypress="return isAlpha(event);" onchange="CheckDuplicateEntryCodeName('Code');">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="control-label col-sm-5">Country Name<sup class="mandetory">*</sup></label>
+                                    <label class="control-label col-sm-5">Country Name<sup class="mandetory">*</sup>:</label>
                                     <div class="col-sm-7">
                                         <input type="text" class="form-control" id="CountryName" onchange="CheckDuplicateEntryCodeName('Name');">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="control-label col-sm-5">SPS Enquiry Point Email</label>
+                                    <label class="control-label col-sm-5">SPS Enquiry Point Email:</label>
                                     <div class="col-sm-7">
                                         <input type="text" class="form-control" id="txtSPSEnq" onkeypress="return onlyEmailsWithSemicolon(event);">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="control-label col-sm-5">TBT Enquiry Point Email</label>
+                                    <label class="control-label col-sm-5">TBT Enquiry Point Email:</label>
                                     <div class="col-sm-7">
                                         <input type="text" class="form-control" id="txtTBTEnq" onkeypress="return onlyEmailsWithSemicolon(event);">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="control-label col-sm-5">Status<sup class="mandetory">*</sup></label>
+                                    <label class="control-label col-sm-5">Status<sup class="mandetory">*</sup>:</label>
                                     <div class="col-sm-7">
                                         <select class="form-control" id="CountryStatus">
                                             <option value="">---Select Status---</option>
@@ -141,7 +141,7 @@
                                             <div class="col-sm-6">
                                                 <a href="#" class="btn btn-dark-green btn-block btn-padding bottom-offset-10" onclick="CountryValidation();">Save</a>
                                             </div>
-                                            <div class="col-sm-6"> 
+                                            <div class="col-sm-6">
                                                 <a href="#" class="btn btn-red btn-block btn-padding bottom-offset-10" data-dismiss="modal">Close</a>
                                             </div>
                                         </div>
