--- a/WTO/Views/Partial/Dashboard/DashboardProcessingStatus.cshtml
+++ b/WTO/Views/Partial/Dashboard/DashboardProcessingStatus.cshtml
@@ -23,7 +23,7 @@
                             <div class="col-xs-12 col-sm-12 col-md-12 text-center">
                                 @if (Convert.ToInt64(@Model.objPendingFullText.Sum(x => Int32.Parse(x.Count.Length > 0 ? x.Count : "0"))) > 0)
                                 {
-                                    <h1 class="totaltext"><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 1 })">@(Model.objPendingFullText.Sum(x => Int32.Parse(x.Count.Length > 0 ? x.Count : "0")))</a> <sub class="subtext">Total</sub></h1>
+                                    <h1 class="totaltext"><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 1,DateofNotification_From=ViewBag.FromDate, DateofNotification_To=ViewBag.ToDate })">@(Model.objPendingFullText.Sum(x => Int32.Parse(x.Count.Length > 0 ? x.Count : "0")))</a> <sub class="subtext">Total</sub></h1>
                                 }
                                 else
                                 {
@@ -38,7 +38,7 @@
                                             <div class="col-xs-8 col-sm-8"><p>@Model.objPendingFullText[0].Text</p></div>
                                             if (Convert.ToInt32(Model.objPendingFullText[0].Count) > 0)
                                             {
-                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 12 })">@Model.objPendingFullText[0].Count</a></p></div>
+                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 12,DateofNotification_From=ViewBag.FromDate, DateofNotification_To=ViewBag.ToDate })">@Model.objPendingFullText[0].Count</a></p></div>
                                             }
                                             else
                                             {
@@ -62,7 +62,7 @@
                                             <div class="col-xs-8 col-sm-8"><p>@Model.objPendingFullText[1].Text</p></div>
                                             if (Convert.ToInt32(Model.objPendingFullText[1].Count) > 0)
                                             {
-                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 13 })">@Model.objPendingFullText[1].Count</a></p></div>
+                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 13,DateofNotification_From=ViewBag.FromDate, DateofNotification_To=ViewBag.ToDate })">@Model.objPendingFullText[1].Count</a></p></div>
                                             }
                                             else
                                             {
@@ -93,7 +93,7 @@
                             <div class="col-xs-12 col-sm-12 col-md-12 text-center">
                                 @if (Convert.ToInt64(@Model.objPendingTranslation.Sum(x => Int32.Parse(x.Count.Length > 0 ? x.Count : "0"))) > 0)
                                 {
-                                    <h1 class="totaltext"><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 2 })">@(Model.objPendingTranslation.Sum(x => Int32.Parse(x.Count.Length > 0 ? x.Count : "0")))</a> <sub class="subtext">Total</sub></h1>
+                                    <h1 class="totaltext"><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 2,DateofNotification_From=ViewBag.FromDate, DateofNotification_To=ViewBag.ToDate })">@(Model.objPendingTranslation.Sum(x => Int32.Parse(x.Count.Length > 0 ? x.Count : "0")))</a> <sub class="subtext">Total</sub></h1>
 
                                 }
                                 else
@@ -109,7 +109,7 @@
                                             <div class="col-xs-8 col-sm-8"><p>@Model.objPendingTranslation[0].Text</p></div>
                                             if (Convert.ToInt32(Model.objPendingTranslation[0].Count) > 0)
                                             {
-                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 14 })">@Model.objPendingTranslation[0].Count</a> </p></div>
+                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 14,DateofNotification_From=ViewBag.FromDate, DateofNotification_To=ViewBag.ToDate })">@Model.objPendingTranslation[0].Count</a> </p></div>
                                             }
                                             else
                                             {
@@ -132,7 +132,7 @@
                                             <div class="col-xs-8 col-sm-8"><p>@Model.objPendingTranslation[1].Text</p></div>
                                             if (Convert.ToInt32(Model.objPendingTranslation[0].Count) > 0)
                                             {
-                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 15 })">@Model.objPendingTranslation[1].Count</a></p></div>
+                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 15,DateofNotification_From=ViewBag.FromDate, DateofNotification_To=ViewBag.ToDate })">@Model.objPendingTranslation[1].Count</a></p></div>
                                             }
                                             else
                                             {
@@ -162,7 +162,7 @@
                             <div class="col-xs-12 col-sm-12 col-md-12 text-center">
                                 @if (Convert.ToInt64(@Model.objToSendtoStakeholder.Sum(x => Int32.Parse(x.Count.Length > 0 ? x.Count : "0"))) > 0)
                                 {
-                                    <h1 class="totaltext"><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 3 })">@(Model.objToSendtoStakeholder.Sum(x => Int32.Parse(x.Count.Length > 0 ? x.Count : "0")))</a> <sub class="subtext">Total</sub></h1>
+                                    <h1 class="totaltext"><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 3,DateofNotification_From=ViewBag.FromDate, DateofNotification_To=ViewBag.ToDate })">@(Model.objToSendtoStakeholder.Sum(x => Int32.Parse(x.Count.Length > 0 ? x.Count : "0")))</a> <sub class="subtext">Total</sub></h1>
 
                                 }
                                 else
@@ -179,7 +179,7 @@
                                             <div class="col-xs-8 col-sm-8"><p>@Model.objToSendtoStakeholder[0].Text</p></div>
                                             if (Convert.ToInt32(Model.objToSendtoStakeholder[0].Count) > 0)
                                             {
-                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 16 })">@Model.objToSendtoStakeholder[0].Count</a></p></div>
+                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 16,DateofNotification_From=ViewBag.FromDate, DateofNotification_To=ViewBag.ToDate })">@Model.objToSendtoStakeholder[0].Count</a></p></div>
                                             }
                                             else
                                             {
@@ -202,7 +202,7 @@
                                             if (Convert.ToInt32(Model.objToSendtoStakeholder[1].Count) > 0)
                                             {
                                                 <div class="col-xs-8 col-sm-8"><p>@Model.objToSendtoStakeholder[1].Text</p></div>
-                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 17 })">@Model.objToSendtoStakeholder[1].Count</a></p></div>
+                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 17,DateofNotification_From=ViewBag.FromDate, DateofNotification_To=ViewBag.ToDate })">@Model.objToSendtoStakeholder[1].Count</a></p></div>
                                             }
                                             else
                                             {
@@ -229,7 +229,7 @@
                             <div class="col-xs-12 col-sm-12 col-md-12 text-center">
                                 @if (Convert.ToInt64(@Model.objToDiscuss.Sum(x => Int32.Parse(x.Count.Length > 0 ? x.Count : "0"))) > 0)
                                 {
-                                    <h1 class="totaltext"><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 4 })">@(Model.objToDiscuss.Sum(x => Int32.Parse(x.Count.Length > 0 ? x.Count : "0")))</a> <sub class="subtext">Total</sub></h1>
+                                    <h1 class="totaltext"><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 4,DateofNotification_From=ViewBag.FromDate, DateofNotification_To=ViewBag.ToDate })">@(Model.objToDiscuss.Sum(x => Int32.Parse(x.Count.Length > 0 ? x.Count : "0")))</a> <sub class="subtext">Total</sub></h1>
                                 }
                                 else
                                 {
@@ -244,7 +244,7 @@
                                             if (Convert.ToInt32(Model.objToDiscuss[0].Count) > 0)
                                             {
                                                 <div class="col-xs-8 col-sm-8"><p>@Model.objToDiscuss[0].Text</p></div>
-                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 18 })">@Model.objToDiscuss[0].Count</a></p></div>
+                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 18,DateofNotification_From=ViewBag.FromDate, DateofNotification_To=ViewBag.ToDate })">@Model.objToDiscuss[0].Count</a></p></div>
                                             }
                                             else
                                             {
@@ -263,7 +263,7 @@
                                          if (Convert.ToInt32(Model.objToDiscuss[1].Count) > 0)
                                          {
                                         <div class="col-xs-8 col-sm-8"><p>@Model.objToDiscuss[1].Text</p></div>
-                                        <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 4 })">@Model.objToDiscuss[1].Count</a></p></div>
+                                        <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 19 ,DateofNotification_From=ViewBag.FromDate, DateofNotification_To=ViewBag.ToDate})">@Model.objToDiscuss[1].Count</a></p></div>
                                          }
                                          else
                                          {
