--- a/WTO/Views/Partial/Notification/NotificationActions.cshtml
+++ b/WTO/Views/Partial/Notification/NotificationActions.cshtml
@@ -2,9 +2,9 @@
 @{
     Layout = null;
 }
-<script src="~/JQuery/Notification_PartialPages.js?v=6"></script>
+<script src="~/JQuery/Notification_PartialPages.js?v=7"></script>
 
-<div class="panel-heading" role="tab" id="headingfive">
+<div class="panel-heading @(Model.MeetingDate==""?"hidden":"")" role="tab" id="headingfive">
     <h4 class="panel-title Accordian-panel-title">
         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsefive" aria-expanded="false" aria-controls="collapsefive">
             <i class="more-less glyphicon glyphicon-chevron-down"></i>
@@ -12,7 +12,7 @@
         </a>
     </h4>
 </div>
-<div id="collapsefive" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingfive">
+<div id="collapsefive" class="panel-collapse collapse in @(Model.MeetingDate==""?"hidden":"")" role="tabpanel" aria-labelledby="headingfive">
     <div class="panel-body Accordian-body">
         <div>
             <div class="col-xs-12 col-sm-12 col-md-12 whitebackground padding-bottom-10 full-border">
@@ -28,7 +28,7 @@
                     </div>
                     @if (Model.IsUpdate)
                     {
-                        <div class="col-xs-12 col-sm-4 col-md-4">
+                        <div class="col-xs-12 col-sm-4 col-md-4 hidden">
                             <a class="btn btn-dark-green pull-right @((Model.Actions != null && Model.Actions.FirstOrDefault(x => ((x.ActionId <4 && x.MailId <=0) || (x.ActionId==4 && x.UpdatedOn!=""))) != null) ? "" : "hidden")" data-SearchFor="@Model.NotificationId" style="margin-right:15px;" id="btnplanAction" onclick="return EditNotificationActions(this);">Plan action</a>
                         </div>
                     }
@@ -86,7 +86,7 @@
                     </div>
                 </div>
 
-                <div class="row top-offset-20">
+                <div class="row top-offset-20 hidden">
                     <div class="col-xs-12 col-sm-12 col-md-12">
                         <div class="table-responsive nopaging notificationlist sentmail">
                             <table class="table table-bordered display">
