--- a/WTO/Views/WTO/NotificationView.cshtml
+++ b/WTO/Views/WTO/NotificationView.cshtml
@@ -510,7 +510,7 @@
                     @*Notification Stakeholder End*@
 
                     @*Notification Actions Start*@
-                    @if ((Model.StakholderMailFlag > 0 && Model.TranslationFlag > 1 && Model.RegulationFlag > 1) || Model.MeetingFlag > 0)
+                    @if ((Model.StakholderMailFlag > 0 && Model.TranslationFlag > 1 && Model.RegulationFlag > 1) || Model.MeetingFlag > 3)
                     {
                         <div class="col-xs-12 col-sm-12 col-md-12 full-border inner-Aqua-shadow top-offset-20 padding-top-bottom" style="border-radius:10px;">
                             <div class="row top-offset-10 @((Model.MeetingFlag > 0)?"":"hidden")">
@@ -525,7 +525,7 @@
                                 <div class="col-xs-12 col-sm-8 col-md-8" style="padding-top: 10px;">
                                     <p class="wto-label-bold @((Model.Actions != null && Model.Actions.Count > 0)?"":"hidden") ">Action</p>
                                 </div>
-                                <div class="col-xs-12 col-sm-4 col-md-4">
+                                <div class="col-xs-12 col-sm-4 col-md-4 hidden">
                                     <a class="btn btn-dark-green pull-right @(((Model.Actions != null && Model.Actions.FirstOrDefault(x => ((x.ActionId <4 && x.MailId <=0))) != null)|| Model.Actions==null) ? "" : "hidden")" data-SearchFor="@Model.NotificationId" style="margin-right:15px;" id="btnplanAction" onclick="return EditNotificationActions(this);">Plan action</a>
                                 </div>
                                 <div class="col-xs-12 col-sm-12 col-md-12">
