--- a/WTO/contents/css/css/wto.css
+++ b/WTO/contents/css/css/wto.css
@@ -1622,8 +1622,8 @@ a.fileremove {
     font-weight: 100;
 }
 
-.sidebar-nav .dropdown-menu li {
-    padding-left: 30px;
+.sidebar-nav .dropdown-menu li a img{
+    margin-left: 30px;
 }
 
 table td {
