Ashvini save untranslated document then send to translator after sending, page should be refreshed and grid should be displayed but here it is not display. Reciepient drop-down list should be arranged in alphabetic orderby in send mail to brief to regulators and policy brief to DoC. Add button as save &add new notification on add notification page,after click on that button notification save and redirect to add new notification.
Atul
After uncheck stakeholder from add stakeholder list then unchecked stakeholder should not be displayed in grid of stakeholder.
After uncheck stakeholder from add stakeholder list then unchecked stakeholder should not be displayed in grid of stakeholder

Aman
Add responses from notifying country
Filter for date of notification and HSCode on notification List page

Avinash
In notification list page, Column name pending discussion changes to procesing status, Pending action changes to Action status and filter name notification name change to processing status.
Date of notification,final date of comment,send response by, Reminder for translation,due date for translation,regulation obtained by date and stakeholder response by Dates calender design is incorrect

--- a/WTO/Views/Partial/Dashboard/DashboardNotificationHistory.cshtml
+++ b/WTO/Views/Partial/Dashboard/DashboardNotificationHistory.cshtml
@@ -4,10 +4,16 @@
 }
 <script>
     var arrayNotificationGraph = [];
+    var arrayNotificationGraphDate=[];
     arrayNotificationGraph.push(['Notification', 'Lapsed', 'In Process', 'Under Action', 'Closed', { role: 'annotation' }]);
+    arrayNotificationGraphDate.push(['SrNo','StartDate','EndDate']);
     function BindArrayNotificationGraph(Notification,Lapsed,InProcess,UnderAction,Closed)
     {
         arrayNotificationGraph.push([Notification,Lapsed,InProcess,UnderAction,Closed,'']);
+    }
+    function BindarrayNotificationGraphDate(SrNo,StartDate,EndDate)
+    {
+        arrayNotificationGraphDate.push([SrNo,StartDate,EndDate]);
     }
 </script>
 <div class="row top-offset-20">
@@ -59,12 +65,15 @@
                     <a class="rightArrow"><img src="~/contents/img/rightArrow.png" alt="rightArrow" onclick="BindGraphNext();" /></a>
                     <div id="chart_div" style="width:100%;height:450px;"></div>
                 </div>
+                @{ int i = 0;}
              @foreach (BusinessObjects.Notification.NotificationGraphData ac in Model)
              {
                     <script>
                         BindArrayNotificationGraph('@ac.MonthName',@ac.LapsedCount,@ac.InProcessCount,@ac.UnderActionCount,@ac.ClosedCount);
-                    </script>
-                }
+                        BindarrayNotificationGraphDate(@i,'@ac.StartDate','@ac.EndDate');
+                     </script>
+                 i++;
+             }
             </div>
         </div>
     </div>
