--- a/WTO/Views/Partial/Notification/NotificationPlanTakeAction.cshtml
+++ b/WTO/Views/Partial/Notification/NotificationPlanTakeAction.cshtml
@@ -146,7 +146,7 @@
                                                         <td class="col-sm-5">Action</td>
                                                         <td class="col-sm-4">
                                                             <div class="form-group has-feedback" style="margin-bottom:0px;">
-                                                                <input type="text" id="RequiredOnId_ActionId" class="form-control date-picker" onkeydown="return false;" data-SearchFor="ActionId" value="RequiredOn" />
+                                                                <input type="text" id="RequiredOnId_ActionId" class="form-control date-picker sm-date-picker" onkeydown="return false;" data-SearchFor="ActionId" value="RequiredOn" />
                                                                 <i class="glyphicon glyphicon-calendar form-control-feedback blue-color" style="right: 0;"></i>
                                                             </div>
                                                         </td>
