--- a/WTO/Views/WTO/AddNotification.cshtml
+++ b/WTO/Views/WTO/AddNotification.cshtml
@@ -9,7 +9,7 @@
 
 <link href="~/contents/css/css/bootstrap-multiselect.css" rel="stylesheet" />
 <script src="~/contents/js/bootstrap-multiselect.js"></script>
-<script src="~/JQuery/AddUpdateNotification.js?v=12"></script>
+<script src="~/JQuery/AddUpdateNotification.js?v=13"></script>
 <!-- body section start -->
 @Html.Hidden("hdnSelectedHSCodes", @Model.HSCodes)
 @Html.Hidden("hdnNotificationId", @Model.NotificationId)
@@ -55,7 +55,7 @@
                                             <div class="panel-body Accordian-body">
                                                 <div class="col-xs-12 col-sm-12 col-md-12 whitebackground padding-bottom-10" style="box-shadow: 0 0px 0 #fff, 0 1px 6px rgba(0,0,0, 0.1);">
                                                     <div class="row top-offset-20">
-                                                        <div class="col-xs-12 col-sm-12 col-md-6 adduploadbutton @(Model.NotificationId > 0 && Model.NotificationAttachment == null ? "hidden" : "")">
+                                                        <div class="col-xs-12 col-sm-12 col-md-6 bottom-offset-10-sm adduploadbutton @(Model.NotificationId > 0 && Model.NotificationAttachment == null ? "hidden" : "")">
                                                             @if (Model.NotificationAttachment == null)
                                                             {
                                                                 <button type="button" class="btn btn-blue btn-padding pull-right" onclick="OpenUploadNotificationPopUp();">Upload document</button>
@@ -235,9 +235,9 @@
                                                             <p class="wto-label-normal">
                                                                 <a class="btn btn-blue" data-toggle="modal" data-target="#selecthr" onclick="bindhscodeUId();"> <img src="~/contents/img/hand.png" /> Select HS Code</a>
                                                             </p>
-                                                            <div class='table-responsive hs-code-table @(@Model.SelectedHSCodes != null ? "" : "hidden")'>
+                                                            <div class='table-responsive adnotificationtable @(@Model.SelectedHSCodes != null ? "" : "hidden")'>
                                                                 <table class="table table-bordered top-offset-10" id="HSCodesId">
-                                                                    <thead class="@(Model.SelectedHSCodes != null && Model.SelectedHSCodes.FirstOrDefault(x=>x.HSCode=="-1")==null? "" : "hidden")">
+                                                                    <thead class="second-blackbackground @(Model.SelectedHSCodes != null && Model.SelectedHSCodes.FirstOrDefault(x=>x.HSCode=="-1")==null? "" : "hidden")">
                                                                         <tr>
                                                                             <th class="col-md-2"><b>HS Code</b></th>
                                                                             <th class="col-md-9"><b>Name</b></th>
@@ -577,7 +577,8 @@
                     <div class="row top-offset-50 bottom-offset-40">
                         <div class="col-xs-12 col-sm-12 col-md-12">
                             <a href="@Url.Action("Index", "NotificationList" , new { PageIndex=1, PageSize=15 })" class='btn btn-gray pull-right btn-padding left-offset-20 bottom-offset-10 @(@Model.NotificationId <= 0 ? "hidden" : "")'><span class="glyphicon glyphicon-arrow-left"></span> <b>Back To List</b></a>
-                            <button class="btn btn-dark-green pull-right btn-padding addsavenotification" onclick="return Validate();"><img src="~/contents/img/save.png" /> Save</button>
+                            <button class="btn btn-dark-green pull-right btn-padding addsavenotification bottom-offset-10" onclick="return Validate('Save');" style="margin-left:15px;"><img src="~/contents/img/save.png" />&nbsp;Save</button>
+                            <button class="btn btn-dark-green pull-right btn-padding addsavenotification" onclick="return Validate('SaveAndNext');"><img src="~/contents/img/save.png" />&nbsp;Save & Add new notification</button>
                         </div>
                     </div>
                 </div>
@@ -624,7 +625,7 @@
                             <div class="col-xs-12 col-sm-12 col-md-12">
                                 <h4 class="selecthrheading">HSCodes description</h4>
                             </div>
-                            <div class="col-xs-12 col-sm-12 col-md-6">
+                            <div class="col-xs-12 col-sm-12 col-md-5">
                                 <div class="input-group">
                                     <input type="text" id="HSCodeSearchTxt" class="form-control selecthrsearchtextbox" placeholder="HSCode/Description">
                                     <span class="input-group-btn">
@@ -633,14 +634,14 @@
                                 </div>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-2">
-                                <a class="btn btn-dark-red bottom-offset-10 pull-right" onclick="clearSearchtxt();">Clear <span class="glyphicon glyphicon-remove"></span></a>
+                                <a class="btn btn-dark-red btn-block bottom-offset-10 pull-right" onclick="clearSearchtxt();">Clear <span class="glyphicon glyphicon-remove"></span></a>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4 ">
+                            <div class="col-xs-12 col-sm-6 col-md-5">
                                 <div class="row">
-                                    <div class="col-xs-6 col-sm-6 col-md-6">
-                                        <a class="btn btn-dark-green btn-block bottom-offset-10" onclick="SaveHSCode();"><img src="~/contents/img/save.png" /> Save</a>
+                                    <div class="col-xs-12 col-sm-6 col-md-7">
+                                        <a class="btn btn-dark-green btn-block bottom-offset-10" onclick="SaveHSCode();"><img src="~/contents/img/save.png" /> Save & Continue </a>
                                     </div>
-                                    <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <div class="col-xs-12 col-sm-6 col-md-5">
                                         <a class="btn btn-red btn-block bottom-offset-10" data-dismiss="modal">Close <span class="glyphicon glyphicon-remove"></span></a>
                                     </div>
                                 </div>
@@ -650,7 +651,6 @@
                                 <div class="row mail-count-height top-offset-16">
                                     <div id="divNoHSCode" class="demo top-offset-30">
                                         <p class="wto-label-bold" id="pNoHSCode">
-                                            @*<label><input type="checkbox" id="cbNoHSCode" value="1" onchange="AddRemoveActions(this)">No HS Code</label>*@
                                             <div class="checkbox radio-margin" style="margin-top: 0;float: left; margin-left:0;">
                                                 <label>
                                                     <input type="checkbox" id="cbNoHSCode">
@@ -727,7 +727,7 @@
                             <div class="col-xs-12 col-sm-12 col-md-12 bottom-offset-20" style="display:none">
                                 <h4 class="selecthrheading">Select Stakeholders</h4>
                             </div>
-                            <div class="col-xs-12 col-sm-12 col-md-8 top-offset-10">
+                            <div class="col-xs-12 col-sm-12 col-md-7 top-offset-10">
                                 <div class="input-group">
                                     <input id="txtSearchStakeHolder" type="text" class="form-control selecthrsearchtextbox" placeholder="Search Stakeholder by Organisation, Name or HS Code" ng-model="search">
                                     <span class="input-group-btn">
@@ -735,11 +735,11 @@
                                     </span>
                                 </div>
                             </div>
-                            <div class="col-xs-12 col-sm-12 col-md-4 top-offset-10">
+                            <div class="col-xs-12 col-sm-12 col-md-5 top-offset-10">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12">
-                                        <a class="btn btn-red  pull-right bottom-offset-10" data-dismiss="modal">Close <span class="glyphicon glyphicon-remove"></span></a>
-                                        <a class="btn btn-dark-green pull-right bottom-offset-10" style="margin-right:15px;" onclick="SaveStakeholder()"><img src="~/contents/img/save.png" /> Save</a>
+                                        <a class="btn btn-red  pull-right bottom-offset-10" data-dismiss="modal" style="margin-left:15px;">Close <span class="glyphicon glyphicon-remove"></span></a>
+                                        <a class="btn btn-dark-green pull-right bottom-offset-10" onclick="SaveStakeholder()"><img src="~/contents/img/save.png" /> Save & Continue</a>
                                     </div>
                                 </div>
                             </div>
@@ -942,7 +942,7 @@
                                                     <div class="fileinput fileinput-new pull-left">
                                                         <span class="btn btn-light-blue btn-padding btn-file">
                                                             <span class="puttext">Add more</span>
-                                                            <input type="file" id="AddAttachment_UploadDocumentId" class="fileholder uploadfile ActionUploadbtn" style="height: 34px !important;bottom: 37px !important;width: 137px !important;" onchange="AddMailAttachment(this);" multiple  />
+                                                            <input type="file" id="AddAttachment_UploadDocumentId" class="fileholder uploadfile ActionUploadbtn" style="height: 34px !important;bottom: 37px !important;width: 137px !important;" onchange="AddMailAttachment(this);" multiple />
                                                         </span>
                                                         <br />
                                                         <span class="text-danger">doc and pdf file only</span>
@@ -1254,7 +1254,7 @@
             <form>
                 <div class="modal-header">
                     <h4 class="modal-title" id="lblModalHeading">Upload document</h4>
-                    <button type="button" class="close" aria-hidden="true" style="margin-top:-25px;" onclick="CloseUploadNotificationPopUp();">&times;</button>
+                    <button type="button" class="close" aria-hidden="true" style="margin-top:-25px;" onclick="return CloseUploadNotificationPopUp();">&times;</button>
                 </div>
                 <div class="modal-body">
                     <div class="row top-offset-10">
@@ -1289,7 +1289,7 @@
                 </div>
                 <div class="modal-footer">
                     <input type="button" class="btn btn-primary" value="Ok" onclick="ReadDocumentFile();" />
-                    <input type="submit" class="btn btn-danger" value="Cancel" onclick="CloseUploadNotificationPopUp();" />
+                    <input type="submit" class="btn btn-danger" value="Cancel" onclick=" return CloseUploadNotificationPopUp();" />
                 </div>
             </form>
         </div>
