--- a/WTO/Views/WTO/NotificationList.cshtml
+++ b/WTO/Views/WTO/NotificationList.cshtml
@@ -46,6 +46,20 @@
     .optionChild {
         padding-left: 15px !important;
     }
+
+    .ui-autocomplete {
+        max-height: 200px;
+        overflow-y: auto;
+        /* prevent horizontal scrollbar */
+        overflow-x: hidden;
+        width: 45% !important;
+    }
+    /* IE 6 doesn't support max-height
+        * we use height instead, but this forces the menu to always be this tall
+        */
+    * html .ui-autocomplete {
+        height: 200px;
+    }
 </style>
 @Html.Hidden("hdnPageIndex", "1")
 @Html.Hidden("hdnNotificationCount", @Model.TotalCount)
@@ -95,7 +109,7 @@ else
                                     <div class="row top-offset-20">
                                         <div class="col-xs-12 col-sm-4 col-md-2">
                                             <div class="form-group">
-                                                <label>Notification no.</label>
+                                                <label>Notification number</label>
                                                 <input id="txtNotificationNumber" type="text" class="form-control textboxcontrol">
                                             </div>
                                         </div>
@@ -110,6 +124,41 @@ else
                                                 {
                                                     <select id="ddlCountry" class="form-control textboxcontrol">No Country</select>
                                                 }
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-12 col-sm-4 col-md-4 SearchAdvnc">
+                                            <div class="row">
+                                                <div class="col-xs-12 col-sm-12 col-md-12">
+                                                    <label>Date of Notification</label>
+                                                </div>
+                                                <div class="form-group has-feedback ">
+                                                    <div class="col-xs-12 col-sm-6 col-md-6 bottom-offset-20">
+                                                        @if (Request["DateofNotification_From"] != null)
+                                                        {
+                                                            <input id="txtNotificationfromdate" type="text" class="form-control date-picker textboxcontrol" placeholder="From date" value="@Convert.ToString(Request["DateofNotification_From"])" />
+                                                        }
+                                                        else
+                                                        {
+                                                            <input id="txtNotificationfromdate" type="text" class="form-control date-picker textboxcontrol" placeholder="From date" />
+                                                        }
+                                                        <i id="fromdateclender" class="glyphicon glyphicon-calendar form-control-feedback blue-color"></i>
+                                                        <a href="#" class="crosstofromdate"><i id="fromdatecross" class='glyphicon glyphicon-remove blue-color hidden' onclick="return txtfromdateClear();"></i></a>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group has-feedback">
+                                                    <div class="col-xs-12 col-sm-6 col-md-6 bottom-offset-20">
+                                                        @if (Request["DateofNotification_To"] != null)
+                                                        {
+                                                            <input id="txtNotificationtodate" type="text" class="form-control date-picker textboxcontrol" placeholder="To date" value="@Convert.ToString(Request["DateofNotification_To"])" / />
+                                                        }
+                                                        else
+                                                        {
+                                                            <input id="txtNotificationtodate" type="text" class="form-control date-picker textboxcontrol" placeholder="To date" />
+                                                        }
+                                                        <i id="todateclender" class="glyphicon glyphicon-calendar form-control-feedback blue-color"></i>
+                                                        <a href="#" class="crosstofromdate"><i id="todatecross" class='glyphicon glyphicon-remove blue-color hidden' onclick="return txttodateClear();"></i></a>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xs-12 col-sm-4 col-md-4 SearchAdvnc">
@@ -133,6 +182,8 @@ else
                                                 </div>
                                             </div>
                                         </div>
+                                        @*</div>
+                                            <div class="row">*@
                                         <div class="col-xs-12 col-sm-4 col-md-2 SearchAdvnc">
                                             <div class="form-group">
                                                 <label>Type</label>
@@ -146,7 +197,7 @@ else
                                         </div>
                                         <div class="col-xs-12 col-sm-4 col-md-2">
                                             <div class="form-group">
-                                                <label>Notification Stage</label>
+                                                <label>Processing Status</label>
                                                 @if (@Model.StatusList != null)
                                                 {
                                                     <select id="ddlStage" class="form-control textboxcontrol">
@@ -181,9 +232,7 @@ else
                                                 }
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-xs-12 col-sm-4 col-md-2 SearchAdvnc">
+                                        <div class="col-xs-12 col-sm-4 col-md-2 hidden">
                                             <div class="form-group">
                                                 <label>Meeting date</label>
                                                 <div class="form-group has-feedback ">
@@ -236,11 +285,21 @@ else
                                                     </select>
                                                 }
                                             </div>
+
+                                        </div>
+                                        <div class="col-xs-12 col-sm-4 col-md-2 SearchAdvnc">
+                                            <div class="form-group">
+                                                <label>Hs Codes</label>
+                                                <div class="form-group has-feedback ">
+                                                    <input type="text" class="form-control textboxcontrol" id="txtHscode" placeholder="Hscode" value="@ViewBag.Hscode">
+                                                    <input type="hidden" id="hdnHsCode" value="@ViewBag.Hscode" />
+                                                </div>
+                                            </div>
                                         </div>
                                         <div id="DivBtn" class="bottom-offset-10">
-                                            <a href="#" class="btn btn-red pull-right left-offset-10 bottom-offset-10" onclick="return Clear();"> <span class="glyphicon glyphicon-remove"></span> Clear</a>
-                                            <a href="#" class="btn btn-blue pull-right left-offset-10 bottom-offset-10" onclick="return SearchNotification(1);"> <span class="glyphicon glyphicon-search"></span> Search</a>
-                                            <a href="#" class="btn btn-blue pull-right left-offset-10 bottom-offset-10" onclick="return AdvanceSearch();"> <span id="GlySearch" class="glyphicon glyphicon-plus"></span> Advance Search</a>
+                                            <a class="btn btn-red pull-right left-offset-10 bottom-offset-10" onclick="return Clear();"> <span class="glyphicon glyphicon-remove"></span> Clear</a>
+                                            <a class="btn btn-blue pull-right left-offset-10 bottom-offset-10" onclick="return SearchNotification(1);"> <span class="glyphicon glyphicon-search"></span> Search</a>
+                                            <a class="btn btn-blue pull-right left-offset-10 bottom-offset-10" onclick="return AdvanceSearch();"> <span id="GlySearch" class="glyphicon glyphicon-plus"></span> Advance Search</a>
                                         </div>
                                     </div>
                                 </div>
@@ -254,9 +313,9 @@ else
                                                         <th>Notification Date</th>
                                                         <th>Final Date of Comments</th>
                                                         <th>Country</th>
-                                                        <th>Pending Discussion</th>
+                                                        <th>Processing Status</th>
                                                         <th class="text-center" style="padding-right:2%;">Stakeholder Responses</th>
-                                                        <th>Pending Action</th>
+                                                        <th>Action Status</th>
                                                         <th></th>
                                                         @*<th>Edit</th>
                                                             <th>Export</th>*@
