--- a/WTO/Views/Partial/StakeHolderList.cshtml
+++ b/WTO/Views/Partial/StakeHolderList.cshtml
@@ -51,6 +51,7 @@ else
                 $("#chkStakeholder_" + str).prop("checked", true);
             }
         }
+        CheckHeaderAll();
     });
 
     function searchstakeholder() {
