--- a/WTO/Views/MoM/Edit.cshtml
+++ b/WTO/Views/MoM/Edit.cshtml
@@ -7,6 +7,7 @@
 <script src="~/contents/js/bootstrap-combobox.js"></script>
 <script src="~/contents/js/ckeditor/ckeditor.js" type="text/javascript"></script>
 <link href="~/contents/css/css/bootstrap-multiselect.css" rel="stylesheet" />
+<link href="~/contents/css/MOM.css" rel="stylesheet" />
 <script src="~/contents/js/bootstrap-multiselect.js"></script>
 
 <script src="~/JQuery/Mom.js?v=6"></script>
@@ -95,7 +96,7 @@
                                         }
                                         else
                                         {
-                                            <a onclick="return EndMeeting();" class="btn btn-blue pull-right" style="margin-right:4%"><b>Close meeting</b></a>
+                                            <a onclick="return OpenEndMeeting();" class="btn btn-blue pull-right" style="margin-right:4%"><b>Close meeting</b></a>
                                         }
                                     }
                                     <button id="btnSaveUpdate" class="btn btn-dark-green pull-right btn-padding addsavenotification hidden" onclick="return Validate();"><img src="/contents/img/save.png"> @(Model.MoMId > 0 ? "Update" : "Save")</button>
@@ -281,6 +282,52 @@
     @{ Html.RenderAction("GetNotificatioNote", "AddNotification"); }
 </div>
 <!--Meeting note Popup end-->
+
+<div class="modal fade selecthrmodal" id="ModelEndMeeting" role="dialog" data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content selecthrcontent">
+            <div class="modal-header selecthrheader">
+                <button type="button" class="close selecthrclose" onclick="return CloseEndMeeting();">
+                    <span class="glyphicon glyphicon-remove"></span>
+                </button>
+            </div>
+            <div class="modal-body selecthrbody">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12">
+                        <div class="col-xs-12 col-sm-12 col-md-12 selecthrbodyinner" style="min-height:150px;">
+                            <div class='col-xs-12 col-sm-12 col-md-12 top-offset-30'>
+                                <div class="padding-bottom-10">
+                                    <div class="row">
+                                        <div class="col-xs-12 col-sm-12 col-md-12">
+                                            <h4 class="selecthrheading">Other Observation</h4>
+                                            <hr />
+                                        </div>
+                                        <div class="col-xs-12 col-sm-12 col-md-12">
+                                            <textarea type="text" class="form-control AutoHeight" style="cursor:pointer" id="txtObservation"></textarea>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-sm-12 col-md-12 bottom-offset-20">
+                                <div class="row">
+                                    <div class="col-xs-12 col-sm-12 col-md-12">
+                                        <a class="btn btn-red pull-right" onclick="return CloseEndMeeting();">Close&nbsp;<span class="glyphicon glyphicon-remove"></span></a>
+                                        <a class="btn btn-dark-green pull-right" style="margin-right:15px;" onclick="return SaveEndMeeting();"><img src="~/contents/img/save.png" />&nbsp;Save & Continue</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade selecthrmodal" id="ModelMeetingSummary" role="dialog" data-backdrop="static" data-keyboard="false">
+    @{ Html.RenderAction("GetMOMSummary", "MoM", new { Id = 6 }); }
+</div>
 
 
 <script type="text/javascript">
